--- a/code/dataset_creation.ipynb
+++ b/code/dataset_creation.ipynb
@@ -26,11 +26,14 @@
     "# DataSet Creation\n",
     "This notebook requests each and everyone of the time-series([covid19-mx-time-series](https://github.com/mariorz/covid19-mx-time-series)) files created by [@mariorz](https://twitter.com/mariorz), filtered  by state (see how on the comments) and creates a single DataFrame to simplify the analysis by state. \n",
     "\n",
-    "The data time-series selected are: \n",
+    "The time-series selected for this project are: \n",
     "\n",
     "| Indicator | Description | File |\n",
-    "|------------------------------------------------|-------------------------------------------------|-------------------------------------------------|\n",
-    "| Confirmed cases | Confirmed by confirmation date | [covid19_confirmed_mx.csv](https://raw.githubusercontent.com/mariorz/covid19-mx-time-series/master/data/covid19_confirmed_mx.csv) |"
+    "|:------------------------------------------------|:-------------------------------------------------|:-------------------------------------------------|\n",
+    "| Confirmed cases | Confirmed by confirmation date | [covid19_confirmed_mx.csv](https://raw.githubusercontent.com/mariorz/covid19-mx-time-series/master/data/covid19_confirmed_mx.csv) |\n",
+    "| Suspects | Suspect cases by date of official publication | [covid19_suspects_mx.csv](https://raw.githubusercontent.com/mariorz/covid19-mx-time-series/master/data/covid19_suspects_mx.csv) |\n",
+    "| Hospitalized | Confirmed hospitalized by admission date | [hospitalized_confirmed_by_admission_date_mx.csv](https://raw.githubusercontent.com/mariorz/covid19-mx-time-series/master/data/full/by_hospital_state/hospitalized_confirmed_by_admission_date_mx.csv) |\n",
+    "| Deaths | Deaths confirmed by death date | [deaths_confirmed_by_death_date_mx.csv](https://raw.githubusercontent.com/mariorz/covid19-mx-time-series/master/data/full/by_hospital_state/deaths_confirmed_by_death_date_mx.csv) |"
    ],
    "cell_type": "markdown",
    "metadata": {}
