--- a/code/dataset_creation.ipynb
+++ b/code/dataset_creation.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 2
     }
    ],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,14 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -251,15 +244,26 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>confirmed</th>\n      <th>confirmed_daily</th>\n      <th>confirmed_ma_7</th>\n      <th>confirmed_ma_14</th>\n      <th>suspects</th>\n      <th>suspects_ma_7</th>\n      <th>suspects_ma_14</th>\n      <th>hospitalized</th>\n      <th>hospitalized_daily</th>\n      <th>hospitalized_ma_7</th>\n      <th>hospitalized_ma_14</th>\n      <th>deaths</th>\n      <th>deaths_daily</th>\n      <th>deaths_ma_7</th>\n      <th>deaths_ma_14</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2020-03-15</th>\n      <td>0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2020-03-16</th>\n      <td>0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>3</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>2</td>\n      <td>1.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2020-03-17</th>\n      <td>0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>2</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>2</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2020-03-18</th>\n      <td>1</td>\n      <td>1.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>2</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>2</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2020-03-19</th>\n      <td>1</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>3</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>2</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2020-11-29</th>\n      <td>7284</td>\n      <td>30.0</td>\n      <td>22.714286</td>\n      <td>18.214286</td>\n      <td>2144</td>\n      <td>2128.571429</td>\n      <td>2054.285714</td>\n      <td>7396</td>\n      <td>14.0</td>\n      <td>18.000000</td>\n      <td>18.857143</td>\n      <td>805</td>\n      <td>0.0</td>\n      <td>1.285714</td>\n      <td>1.357143</td>\n    </tr>\n    <tr>\n      <th>2020-11-30</th>\n      <td>7318</td>\n      <td>34.0</td>\n      <td>24.285714</td>\n      <td>20.571429</td>\n      <td>2076</td>\n      <td>2126.428571</td>\n      <td>2062.428571</td>\n      <td>7406</td>\n      <td>10.0</td>\n      <td>16.000000</td>\n      <td>19.000000</td>\n      <td>806</td>\n      <td>1.0</td>\n      <td>1.285714</td>\n      <td>1.214286</td>\n    </tr>\n    <tr>\n      <th>2020-12-01</th>\n      <td>7374</td>\n      <td>56.0</td>\n      <td>28.571429</td>\n      <td>24.000000</td>\n      <td>2007</td>\n      <td>2112.571429</td>\n      <td>2065.714286</td>\n      <td>7420</td>\n      <td>14.0</td>\n      <td>14.714286</td>\n      <td>17.642857</td>\n      <td>807</td>\n      <td>1.0</td>\n      <td>1.285714</td>\n      <td>1.285714</td>\n    </tr>\n    <tr>\n      <th>2020-12-02</th>\n      <td>7391</td>\n      <td>17.0</td>\n      <td>27.285714</td>\n      <td>24.642857</td>\n      <td>2004</td>\n      <td>2096.428571</td>\n      <td>2068.285714</td>\n      <td>7420</td>\n      <td>0.0</td>\n      <td>11.714286</td>\n      <td>15.071429</td>\n      <td>807</td>\n      <td>0.0</td>\n      <td>1.285714</td>\n      <td>1.285714</td>\n    </tr>\n    <tr>\n      <th>2020-12-03</th>\n      <td>7420</td>\n      <td>29.0</td>\n      <td>29.857143</td>\n      <td>26.142857</td>\n      <td>2032</td>\n      <td>2079.142857</td>\n      <td>2071.857143</td>\n      <td>7420</td>\n      <td>0.0</td>\n      <td>8.857143</td>\n      <td>13.428571</td>\n      <td>807</td>\n      <td>0.0</td>\n      <td>0.714286</td>\n      <td>1.142857</td>\n    </tr>\n  </tbody>\n</table>\n<p>264 rows × 15 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 7
     }
    ],
    "source": [
     "merge_1 = confirmed.merge(suspects, left_index=True, right_index=True)\n",
     "merge_2 = merge_1.merge(hospitalized, left_index=True, right_index=True)\n",
-    "merge_3 = merge_2.merge(deaths, left_index=True, right_index=True)\n",
+    "df = merge_2.merge(deaths, left_index=True, right_index=True)\n",
     "\n",
-    "merge_3"
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saving the DataFrame as a CSV file\n",
+    "\n",
+    "df.to_csv('data/colima_df.csv', index = True)"
    ]
   },
   {
