--- a/code/df_builder.ipynb
+++ b/code/df_builder.ipynb
@@ -263,7 +263,7 @@
    "source": [
     "# Saving the DataFrame as a CSV file\n",
     "\n",
-    "df.to_csv('data/colima_df.csv', index = True)"
+    "df.to_csv('data_output/colima_df.csv', index = True)"
    ]
   },
   {
