reorganized html plots

--- a/code/df_builder.ipynb
+++ b/code/df_builder.ipynb
@@ -175,7 +175,7 @@
     "deaths_daily = deaths['deaths_daily'] = deaths.Colima.diff()\n",
     "deaths['hospitalized_ma_7'] = deaths_daily.rolling(window=7).mean()\n",
     "deaths['hospitalized_ma_14'] = deaths_daily.rolling(window=14).mean()\n",
-    "deaths.columns = ['deaths','deaths_daily ','deaths_ma_7','deaths_ma_14']"
+    "deaths.columns = ['deaths','deaths_daily','deaths_ma_7','deaths_ma_14']"
    ]
   },
   {
@@ -226,18 +226,18 @@
        "2020-12-05                 0.0          12.285714           15.785714     811   \n",
        "2020-12-06                 0.0           9.857143           15.142857     811   \n",
        "\n",
-       "            deaths_daily   deaths_ma_7  deaths_ma_14  \n",
-       "2020-03-15            NaN          NaN           NaN  \n",
-       "2020-03-16            0.0          NaN           NaN  \n",
-       "2020-03-17            0.0          NaN           NaN  \n",
-       "2020-03-18            0.0          NaN           NaN  \n",
-       "2020-03-19            0.0          NaN           NaN  \n",
-       "...                   ...          ...           ...  \n",
-       "2020-12-02            0.0     1.428571      1.357143  \n",
-       "2020-12-03            0.0     0.714286      1.214286  \n",
-       "2020-12-04            0.0     0.428571      1.071429  \n",
-       "2020-12-05            1.0     0.428571      1.071429  \n",
-       "2020-12-06            0.0     0.428571      0.928571  \n",
+       "            deaths_daily  deaths_ma_7  deaths_ma_14  \n",
+       "2020-03-15           NaN          NaN           NaN  \n",
+       "2020-03-16           0.0          NaN           NaN  \n",
+       "2020-03-17           0.0          NaN           NaN  \n",
+       "2020-03-18           0.0          NaN           NaN  \n",
+       "2020-03-19           0.0          NaN           NaN  \n",
+       "...                  ...          ...           ...  \n",
+       "2020-12-02           0.0     1.428571      1.357143  \n",
+       "2020-12-03           0.0     0.714286      1.214286  \n",
+       "2020-12-04           0.0     0.428571      1.071429  \n",
+       "2020-12-05           1.0     0.428571      1.071429  \n",
+       "2020-12-06           0.0     0.428571      0.928571  \n",
        "\n",
        "[267 rows x 15 columns]"
       ],
@@ -251,7 +251,6 @@
     "merge_1 = confirmed.merge(suspects, left_index=True, right_index=True)\n",
     "merge_2 = merge_1.merge(hospitalized, left_index=True, right_index=True)\n",
     "df = merge_2.merge(deaths, left_index=True, right_index=True)\n",
-    "\n",
     "df "
    ]
   },
@@ -264,6 +263,41 @@
     "# Saving the DataFrame as a CSV file\n",
     "\n",
     "df.to_csv('data_output/colima_df.csv', index = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "confirmed               int64\n",
+       "confirmed_daily       float64\n",
+       "confirmed_ma_7        float64\n",
+       "confirmed_ma_14       float64\n",
+       "suspects                int64\n",
+       "suspects_ma_7         float64\n",
+       "suspects_ma_14        float64\n",
+       "hospitalized            int64\n",
+       "hospitalized_daily    float64\n",
+       "hospitalized_ma_7     float64\n",
+       "hospitalized_ma_14    float64\n",
+       "deaths                  int64\n",
+       "deaths_daily          float64\n",
+       "deaths_ma_7           float64\n",
+       "deaths_ma_14          float64\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "df.dtypes"
    ]
   }
  ]
