--- a/_backup/code/df_builder.ipynb
+++ b/_backup/code/df_builder.ipynb
@@ -15,7 +15,8 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3"
+   "display_name": "Python 3",
+   "language": "python"
   }
  },
  "nbformat": 4,
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +66,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 29
     }
    ],
    "source": [
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -194,11 +195,11 @@
        "2020-03-18          1              1.0             NaN              NaN   \n",
        "2020-03-19          1              0.0             NaN              NaN   \n",
        "...               ...              ...             ...              ...   \n",
-       "2020-12-03       7420             29.0       29.857143        26.142857   \n",
-       "2020-12-04       7428              8.0       26.857143        25.571429   \n",
-       "2020-12-05       7471             43.0       31.000000        25.928571   \n",
-       "2020-12-06       7485             14.0       28.714286        25.714286   \n",
-       "2020-12-07       7509             24.0       27.285714        25.785714   \n",
+       "2020-12-13       7628             11.0       20.428571        24.571429   \n",
+       "2020-12-14       7646             18.0       19.571429        23.428571   \n",
+       "2020-12-15       7667             21.0       20.571429        20.928571   \n",
+       "2020-12-16       7674              7.0       18.428571        20.214286   \n",
+       "2020-12-17       7695             21.0       18.000000        19.642857   \n",
        "\n",
        "            suspects  suspects_ma_7  suspects_ma_14  hospitalized  \\\n",
        "2020-03-15         1            NaN             NaN             1   \n",
@@ -207,11 +208,11 @@
        "2020-03-18         2            NaN             NaN             2   \n",
        "2020-03-19         3            NaN             NaN             2   \n",
        "...              ...            ...             ...           ...   \n",
-       "2020-12-03      2032    2079.142857     2071.857143          7491   \n",
-       "2020-12-04      2096    2075.285714     2079.928571          7499   \n",
-       "2020-12-05      2041    2057.142857     2083.642857          7505   \n",
-       "2020-12-06      2058    2044.857143     2086.714286          7509   \n",
-       "2020-12-07      2030    2038.285714     2082.357143          7509   \n",
+       "2020-12-13      1967    2011.428571     2028.142857          7684   \n",
+       "2020-12-14      1953    2000.428571     2019.357143          7691   \n",
+       "2020-12-15      1961    1989.142857     2016.071429          7694   \n",
+       "2020-12-16      1993    1984.142857     2015.285714          7695   \n",
+       "2020-12-17      2018    1986.142857     2014.285714          7695   \n",
        "\n",
        "            hospitalized_daily  hospitalized_ma_7  hospitalized_ma_14  deaths  \\\n",
        "2020-03-15                 NaN                NaN                 NaN       0   \n",
@@ -220,11 +221,11 @@
        "2020-03-18                 0.0                NaN                 NaN       0   \n",
        "2020-03-19                 0.0                NaN                 NaN       0   \n",
        "...                        ...                ...                 ...     ...   \n",
-       "2020-12-03                15.0          18.285714           18.285714     810   \n",
-       "2020-12-04                 8.0          16.428571           17.857143     810   \n",
-       "2020-12-05                 6.0          15.142857           17.214286     812   \n",
-       "2020-12-06                 4.0          13.285714           16.857143     812   \n",
-       "2020-12-07                 0.0          10.285714           15.142857     812   \n",
+       "2020-12-13                13.0          18.285714           19.214286     829   \n",
+       "2020-12-14                 7.0          16.000000           18.071429     832   \n",
+       "2020-12-15                 3.0          14.142857           16.571429     833   \n",
+       "2020-12-16                 1.0          11.000000           14.857143     833   \n",
+       "2020-12-17                 0.0           8.285714           13.000000     833   \n",
        "\n",
        "            deaths_daily  deaths_ma_7  deaths_ma_14  \n",
        "2020-03-15           NaN          NaN           NaN  \n",
@@ -233,18 +234,18 @@
        "2020-03-18           0.0          NaN           NaN  \n",
        "2020-03-19           0.0          NaN           NaN  \n",
        "...                  ...          ...           ...  \n",
-       "2020-12-03           0.0     0.714286      1.214286  \n",
-       "2020-12-04           0.0     0.428571      1.071429  \n",
-       "2020-12-05           2.0     0.571429      1.142857  \n",
-       "2020-12-06           0.0     0.571429      1.000000  \n",
-       "2020-12-07           0.0     0.428571      0.928571  \n",
+       "2020-12-13           3.0     1.428571      1.214286  \n",
+       "2020-12-14           3.0     1.714286      1.357143  \n",
+       "2020-12-15           1.0     1.714286      1.357143  \n",
+       "2020-12-16           0.0     1.428571      1.357143  \n",
+       "2020-12-17           0.0     1.285714      1.285714  \n",
        "\n",
-       "[268 rows x 15 columns]"
+       "[278 rows x 15 columns]"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>confirmed</th>\n      <th>confirmed_daily</th>\n      <th>confirmed_ma_7</th>\n      <th>confirmed_ma_14</th>\n      <th>suspects</th>\n      <th>suspects_ma_7</th>\n      <th>suspects_ma_14</th>\n      <th>hospitalized</th>\n      <th>hospitalized_daily</th>\n      <th>hospitalized_ma_7</th>\n      <th>hospitalized_ma_14</th>\n      <th>deaths</th>\n      <th>deaths_daily</th>\n      <th>deaths_ma_7</th>\n      <th>deaths_ma_14</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2020-03-15</th>\n      <td>0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2020-03-16</th>\n      <td>0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>3</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>2</td>\n      <td>1.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2020-03-17</th>\n      <td>0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>2</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>2</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2020-03-18</th>\n      <td>1</td>\n      <td>1.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>2</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>2</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2020-03-19</th>\n      <td>1</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>3</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>2</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2020-12-03</th>\n      <td>7420</td>\n      <td>29.0</td>\n      <td>29.857143</td>\n      <td>26.142857</td>\n      <td>2032</td>\n      <td>2079.142857</td>\n      <td>2071.857143</td>\n      <td>7491</td>\n      <td>15.0</td>\n      <td>18.285714</td>\n      <td>18.285714</td>\n      <td>810</td>\n      <td>0.0</td>\n      <td>0.714286</td>\n      <td>1.214286</td>\n    </tr>\n    <tr>\n      <th>2020-12-04</th>\n      <td>7428</td>\n      <td>8.0</td>\n      <td>26.857143</td>\n      <td>25.571429</td>\n      <td>2096</td>\n      <td>2075.285714</td>\n      <td>2079.928571</td>\n      <td>7499</td>\n      <td>8.0</td>\n      <td>16.428571</td>\n      <td>17.857143</td>\n      <td>810</td>\n      <td>0.0</td>\n      <td>0.428571</td>\n      <td>1.071429</td>\n    </tr>\n    <tr>\n      <th>2020-12-05</th>\n      <td>7471</td>\n      <td>43.0</td>\n      <td>31.000000</td>\n      <td>25.928571</td>\n      <td>2041</td>\n      <td>2057.142857</td>\n      <td>2083.642857</td>\n      <td>7505</td>\n      <td>6.0</td>\n      <td>15.142857</td>\n      <td>17.214286</td>\n      <td>812</td>\n      <td>2.0</td>\n      <td>0.571429</td>\n      <td>1.142857</td>\n    </tr>\n    <tr>\n      <th>2020-12-06</th>\n      <td>7485</td>\n      <td>14.0</td>\n      <td>28.714286</td>\n      <td>25.714286</td>\n      <td>2058</td>\n      <td>2044.857143</td>\n      <td>2086.714286</td>\n      <td>7509</td>\n      <td>4.0</td>\n      <td>13.285714</td>\n      <td>16.857143</td>\n      <td>812</td>\n      <td>0.0</td>\n      <td>0.571429</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>2020-12-07</th>\n      <td>7509</td>\n      <td>24.0</td>\n      <td>27.285714</td>\n      <td>25.785714</td>\n      <td>2030</td>\n      <td>2038.285714</td>\n      <td>2082.357143</td>\n      <td>7509</td>\n      <td>0.0</td>\n      <td>10.285714</td>\n      <td>15.142857</td>\n      <td>812</td>\n      <td>0.0</td>\n      <td>0.428571</td>\n      <td>0.928571</td>\n    </tr>\n  </tbody>\n</table>\n<p>268 rows × 15 columns</p>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>confirmed</th>\n      <th>confirmed_daily</th>\n      <th>confirmed_ma_7</th>\n      <th>confirmed_ma_14</th>\n      <th>suspects</th>\n      <th>suspects_ma_7</th>\n      <th>suspects_ma_14</th>\n      <th>hospitalized</th>\n      <th>hospitalized_daily</th>\n      <th>hospitalized_ma_7</th>\n      <th>hospitalized_ma_14</th>\n      <th>deaths</th>\n      <th>deaths_daily</th>\n      <th>deaths_ma_7</th>\n      <th>deaths_ma_14</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2020-03-15</th>\n      <td>0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2020-03-16</th>\n      <td>0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>3</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>2</td>\n      <td>1.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2020-03-17</th>\n      <td>0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>2</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>2</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2020-03-18</th>\n      <td>1</td>\n      <td>1.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>2</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>2</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2020-03-19</th>\n      <td>1</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>3</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>2</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2020-12-13</th>\n      <td>7628</td>\n      <td>11.0</td>\n      <td>20.428571</td>\n      <td>24.571429</td>\n      <td>1967</td>\n      <td>2011.428571</td>\n      <td>2028.142857</td>\n      <td>7684</td>\n      <td>13.0</td>\n      <td>18.285714</td>\n      <td>19.214286</td>\n      <td>829</td>\n      <td>3.0</td>\n      <td>1.428571</td>\n      <td>1.214286</td>\n    </tr>\n    <tr>\n      <th>2020-12-14</th>\n      <td>7646</td>\n      <td>18.0</td>\n      <td>19.571429</td>\n      <td>23.428571</td>\n      <td>1953</td>\n      <td>2000.428571</td>\n      <td>2019.357143</td>\n      <td>7691</td>\n      <td>7.0</td>\n      <td>16.000000</td>\n      <td>18.071429</td>\n      <td>832</td>\n      <td>3.0</td>\n      <td>1.714286</td>\n      <td>1.357143</td>\n    </tr>\n    <tr>\n      <th>2020-12-15</th>\n      <td>7667</td>\n      <td>21.0</td>\n      <td>20.571429</td>\n      <td>20.928571</td>\n      <td>1961</td>\n      <td>1989.142857</td>\n      <td>2016.071429</td>\n      <td>7694</td>\n      <td>3.0</td>\n      <td>14.142857</td>\n      <td>16.571429</td>\n      <td>833</td>\n      <td>1.0</td>\n      <td>1.714286</td>\n      <td>1.357143</td>\n    </tr>\n    <tr>\n      <th>2020-12-16</th>\n      <td>7674</td>\n      <td>7.0</td>\n      <td>18.428571</td>\n      <td>20.214286</td>\n      <td>1993</td>\n      <td>1984.142857</td>\n      <td>2015.285714</td>\n      <td>7695</td>\n      <td>1.0</td>\n      <td>11.000000</td>\n      <td>14.857143</td>\n      <td>833</td>\n      <td>0.0</td>\n      <td>1.428571</td>\n      <td>1.357143</td>\n    </tr>\n    <tr>\n      <th>2020-12-17</th>\n      <td>7695</td>\n      <td>21.0</td>\n      <td>18.000000</td>\n      <td>19.642857</td>\n      <td>2018</td>\n      <td>1986.142857</td>\n      <td>2014.285714</td>\n      <td>7695</td>\n      <td>0.0</td>\n      <td>8.285714</td>\n      <td>13.000000</td>\n      <td>833</td>\n      <td>0.0</td>\n      <td>1.285714</td>\n      <td>1.285714</td>\n    </tr>\n  </tbody>\n</table>\n<p>278 rows × 15 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 34
     }
    ],
    "source": [
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +294,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 36
     }
    ],
    "source": [
